# dynamic-sampling-code-old

./: .gitignore  AcceptanceRejection.cpp  AcceptanceRejection.h  CMakeLists.txt  CascadeOfGroups.cpp  CascadeOfGroups.h  CompleteBinaryTree.cpp  CompleteBinaryTree.h  NestedGroups.cpp  NestedGroups.h  README.md  RunningStats.hpp  TOG.cpp  TOG.h  TwoLevelAR.cpp  TwoLevelAR.h  TwoLevelARB.cpp  TwoLevelARB.h  check  check_distro.cpp  main.cpp  old-main.cpp  out.txt
testing/: averages.py  main-2arb.cpp  main-ar.cpp  main-cbt.cpp  main-cog.cpp  main-revcog.cpp  main-tog.cpp
